--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/bdv1puz.css">
     <script src="script.js"></script>
-    <link rel="shortcut icon" href="circle.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="icons/circle.svg" type="image/x-icon">
     <title>The Right to be Yourself</title>
 </head>
 <body>
@@ -14,91 +14,70 @@
         <div id="graph-background"></div>
 
         <section id="title">
-            <h1>The <em>right</em> to be <em>yourself</em></h1>
+            <h1>The Right to be Yourself</h1>
         </section>
         <section id="intro">
             <h2>The LGBTQ+ community is a diverse group of identities across the gender and sexual orientation spectrums.</h2>
         </section>
 
-        <section class="content" id="content-1">
+        <section class="content" id="sect-1">
             <h2>People in younger generations are being more open about their identities, and some are more vocal about the important issues threatening their rights. However, it is not always safe to be so open or so vocal, with many having to hide their true selves from the world.</h2>
-        </section>
-        <section class="graph" id="graph-1-1">
-            <div class="tableauPlaceholder" id="viz1727747256144" style="position: relative"><noscript><a href="#"><img alt="Percent of LGBTQ+ Youth Who Have Been Harmed For Their Identity " src="https://public.tableau.com/static/images/LG/LGBTQDataViz-HarmedForIdentity/Sheet1/1_rss.png" style="border: none" /></a></noscript><object class="tableauViz"  style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /> <param name="embed_code_version" value="3" /> <param name="site_root" value="" /><param name="name" value="LGBTQDataViz-HarmedForIdentity/Sheet1" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/LG/LGBTQDataViz-HarmedForIdentity/Sheet1/1.png" /> <param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-US" /><param name="filter" value="publish=yes" /></object></div>
-            <script type="text/javascript">
-                var divElement = document.getElementById("viz1727747256144");
-                var vizElement = divElement.getElementsByTagName("object")[0];
-                // vizElement.style.width="100%";vizElement.style.height=(divElement.offsetWidth*0.75)+"px";
-                var scriptElement = document.createElement("script");
-                scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-                vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
-        </section>
-        <section class="anecdotes" id="anecdotes-2-1">
-            <blockquote id="quote-1-1">When I came out I was 29 (it was 1985). My father had just died in an accident and that forced me to confront being gay and moving forward to live my true life. I knew I was gay when I was 13, but repressed it through HS, college, and my 20&#8217;s. I didn&#8217;t date women. I was just a solo person, with many friends, who stayed busy with other activities. I&#8217;m 66 now, married to a long-time partner. I envy the youth of today. I still sometimes struggle when I recall the pain of hiding from everyone including myself for so many years.</blockquote>
-            <div class="demo-cats">66 - Gay/Male</div>
-        </section>
-
-        <section class="content" id="content-2">
-            <h2>At the same time, others are becoming more accepting. But there are still many who believe that LGBTQ+ individuals don&#8217;t deserve basic rights, and laws that actively infringe on those rights.</h2>
-        </section>
-        <section class="graph" id="graph-2-1">
-            <figure>GRAPH 2-1</figure>
-        </section>
-        <section class="anecdotes" id="anecdotes-2-1">
-            <blockquote id="quote-2-1">When I came out I was still struggling with internalized homophobia. I wrote my mom a letter, explaining that I like girls, and when she finished reading it, she hugged me. Then she said &#8220;Honey, this is how you were born, and I love you for it.&#8221; I know not everybody has an easy time, but her reaction helped me to come out to the rest of my family.</blockquote>
-            <div class="demo-cats">17 - Lesbian/Female</div>
-        </section>
-        <section class="graph" id="graph-2-2">
-            <figure>GRAPH 2-2</figure>
-        </section>
-        <section class="anecdotes" id="anecdotes-2-2">
-            <blockquote id="quote-2-2">When I came out, I was sitting on the porch swing with my older sister as we shared stories from our day. I hesitated with a knot in my stomach for a while before finally summoning the courage to say, &#8220;I need to tell you something. You know {my friend&#8217;s name}? Well, we are dating. I&#8217;m gay.&#8221; My sister turned to me with a big smile. She wrapped her arm around my shoulder, pulling me close as she whispered, &#8220;Thank you for being you.&#8221; I&#8217;ll never forget that.</blockquote>
-            <div class="demo-cats">17 - Gay/Male</div>
-        </section>
-
-        <section class="content" id="content-3">
-            <h2>And not everyone is silent in their opposition. People are consistently attacked just for existing as themselves.</h2>
-        </section>
-        <section class="graph" id="graph-3-1">
-            <div class="tableauPlaceholder" id="viz1727747256144" style="position: relative"><noscript><a href="#"><img alt="Percent of LGBTQ+ Youth Who Have Been Harmed For Their Identity " src="https://public.tableau.com/static/images/LG/LGBTQDataViz-HarmedForIdentity/Sheet1/1_rss.png" style="border: none" /></a></noscript><object class="tableauViz"  style="display:none;"><param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" /> <param name="embed_code_version" value="3" /> <param name="site_root" value="" /><param name="name" value="LGBTQDataViz-HarmedForIdentity/Sheet1" /><param name="tabs" value="no" /><param name="toolbar" value="yes" /><param name="static_image" value="https://public.tableau.com/static/images/LG/LGBTQDataViz-HarmedForIdentity/Sheet1/1.png" /> <param name="animate_transition" value="yes" /><param name="display_static_image" value="yes" /><param name="display_spinner" value="yes" /><param name="display_overlay" value="yes" /><param name="display_count" value="yes" /><param name="language" value="en-US" /><param name="filter" value="publish=yes" /></object></div>
-            <script type="text/javascript">
-                var divElement = document.getElementById("viz1727747256144");
-                var vizElement = divElement.getElementsByTagName("object")[0];
-                // vizElement.style.width="100%";vizElement.style.height=(divElement.offsetWidth*0.75)+"px";
-                var scriptElement = document.createElement("script");
-                scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-                vizElement.parentNode.insertBefore(scriptElement, vizElement);
-            </script>
-        </section>
-        <section class="anecdotes" id="anecdotes-3-1">
-            <blockquote id="quote-3-1">When I came out, I was teased and even abused. My father was a conservative and he worked for our town mayor and he was never fond of the LGBTQ+ community. And ever since my mom passed away, my father only got worse and started drinking. I mustered up the courage to tell that I liked both boys and girls. He shot me this dirty look and called me names before dragging my hair and throwing me into my room. When I came out to my school, which was a Christian school, everyone laughed and made fun of me. But, I will find acceptance and I won&#8217;t let people bring me down.</blockquote>
-            <div class="demo-cats">16 - Bisexual/Female</div>
-        </section>
-
-        <section class="content" id="content-4">
-            <h2>But the negative impacts don&#8217;t stop with direct acts of hate. These harmful attitudes affect nearly every part of their lives, and lead to detrimental mental health issues.</h2>
-        </section>
-        <section class="graph" id="graph-4-1">
-            <figure>GRAPH 4-1</figure>
-        </section>
-        <section class="anecdotes" id="anecdotes-4-1">
-            <blockquote id="quote-4-1">When I came out, I was 14. I felt very uncomfortable in my own skin and I would sort of shame myself, as an example, I would pull my hair and cut it. And when I came into my parent&#8217;s bedroom, they looked at me and just sighed. I don&#8217;t know in relief or in shame, but they looked at me and nodded slightly. I took it as acceptance and now I&#8217;m living as my true self.</blockquote>
-            <div class="demo-cats">19 - Demiromantic/Trans Man</div>
-        </section>
-        <section class="graph" id="graph-4-2">
-            <figure>GRAPH 4-2</figure>
-        </section>
-        <section class="anecdotes" id="anecdotes-4-2">
-            <blockquote id="quote-4-2">When I came out to my parents, it made me realize a lot. I didn&#8217;t get the choice to come out on my own terms, as they found out on their own and I was forced to come out. I felt pretty heartbroken when they responded with disgust and disbelief, almost like it was phenomenon. After that they just ignored who I was and it was just pretty awkward after that. I wish it ended up differently but it made realize that I should accept myself because that&#8217;s who I am. Do not let people dictate on who you are. Be yourself.</blockquote>
-            <div class="demo-cats">13 - Abrosexual/Non-binary/Trans Masc</div>
-        </section>
-
-        <section class="content" id="content-5">
-            <h2>And all of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and the world. It doesn&#8217;t have to stay this way. Fight for legislation that protects LGBTQ+ rights. Fight against discrimination and violence. Fight for the right to be yourself.</h2>
-            <footer>
-                <p>Stories from <a href="https://whenicameout.com/">When I Came Out</a>, edited for clarity.</p>
-            </footer>
+            <blockquote>
+                <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. I'm really glad that today's youth get at least a bit more acceptance and I hope that tomorrow's youth will get even more. I hope that someday, being LGBT is so normalized that coming out won't even be a thing. That someday straight and cis will no longer be assumed to be ‘the default’ with LGBT being ‘the other’.</p>
+                <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+            </blockquote>
+            <div class="graph">
+                <h3>US Self-Identified LGBTQ+ Individuals by Generation</h3>
+                <figure>
+                    <div class="axis-title side-axis-title">Percentage</div>
+                    <div class="axis-labels side-axis-labels">
+                        <div style="height: calc(100%/5 - 0.25rem);">25%</div>
+                        <div style="height: calc(100%/5 - 0.25rem);">20%</div>
+                        <div style="height: calc(100%/5 - 0.25rem);">15%</div>
+                        <div style="height: calc(100%/5 - 0.25rem);">10%</div>
+                        <div style="height: calc(100%/5 - 0.25rem);">5%</div>
+                        <div style="height: calc(100%/5 - 0.25rem);">0%</div>
+                    </div>
+                    <div class="chart">
+                        <img src="graphs/generations.svg">
+                        <div class="axis-labels bottom-axis-labels">
+                            <div style="width: 20%">Silent Generation<br>(born before 1946)</div>
+                            <div style="width: 20%">Baby Boomers<br>(born 1946-1964)</div>
+                            <div style="width: 20%">Generation X<br>(born 1965-1980)</div>
+                            <div style="width: 20%">Millennials<br>(born 1981-1996)</div>
+                            <div style="width: 20%">Generation Z<br>(born 1997-2003)</div>
+                        </div>
+                        <div class="axis-title bottom-axis-title">Generation</div>
+                    </div>
+                    <div class="key">
+                        <div>
+                            <div class="key-color" style="background-color: #8e8e8e;"></div>
+                            <div class="key-label">Other</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-label">Transgender</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-label">Lesbian</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-label">Gay</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #79599e;"></div>
+                            <div class="key-label">Bisexual</div>
+                        </div>
+                    </div>
+                </figure>
+                <figcaption>
+                    <p>asfunsadifnias asdfjiuasndif fsauidnfin fuidsnifn fiudsnifusno fdsiunfijiurn geriu iru</p>
+                    <a href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
+                </figcaption>
+            </div>
         </section>
     </main>
 </body>
