--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
 
         <section class="content" id="sect-1">
             <h2>People in younger generations are being more open about their identities, and some are more vocal about the important issues threatening their rights. However, it is not always safe to be so open or so vocal, with many having to hide their true selves from the world.</h2>
+            <hr class="rule-h">
             <blockquote>
                 <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
                 <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. I'm really glad that today's youth get at least a bit more acceptance and I hope that tomorrow's youth will get even more. I hope that someday, being LGBT is so normalized that coming out won't even be a thing. That someday straight and cis will no longer be assumed to be ‘the default’ with LGBT being ‘the other’.</p>
                 <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
             </blockquote>
+            <hr class="rule-v">
             <div class="graph">
                 <h3>US Self-Identified LGBTQ+ Individuals by Generation</h3>
                 <figure>
                     <div class="axis-title side-axis-title">Percentage</div>
                     <div class="axis-labels side-axis-labels">
-                        <div style="height: calc(100%/5 - 0.25rem);">25%</div>
-                        <div style="height: calc(100%/5 - 0.25rem);">20%</div>
-                        <div style="height: calc(100%/5 - 0.25rem);">15%</div>
-                        <div style="height: calc(100%/5 - 0.25rem);">10%</div>
-                        <div style="height: calc(100%/5 - 0.25rem);">5%</div>
-                        <div style="height: calc(100%/5 - 0.25rem);">0%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">25%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">20%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">15%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">10%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">5%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">0%</div>
                     </div>
-                    <div class="chart">
-                        <img src="graphs/generations.svg">
-                        <div class="axis-labels bottom-axis-labels">
-                            <div style="width: 20%">Silent Generation<br>(born before 1946)</div>
-                            <div style="width: 20%">Baby Boomers<br>(born 1946-1964)</div>
-                            <div style="width: 20%">Generation X<br>(born 1965-1980)</div>
-                            <div style="width: 20%">Millennials<br>(born 1981-1996)</div>
-                            <div style="width: 20%">Generation Z<br>(born 1997-2003)</div>
-                        </div>
-                        <div class="axis-title bottom-axis-title">Generation</div>
+                    <img class="chart" src="graphs/generations.svg">
+                    <div class="axis-labels bottom-axis-labels">
+                        <div style="width: 20%">Silent Generation (born before 1946)</div>
+                        <div style="width: 20%">Baby Boomers (born 1946-1964)</div>
+                        <div style="width: 20%">Generation X (born 1965-1980)</div>
+                        <div style="width: 20%">Millennials (born 1981-1996)</div>
+                        <div style="width: 20%">Generation Z (born 1997-2003)</div>
                     </div>
+                    <div class="axis-title bottom-axis-title">Generation</div>
                     <div class="key">
                         <div>
                             <div class="key-color" style="background-color: #8e8e8e;"></div>
@@ -74,7 +74,7 @@
                     </div>
                 </figure>
                 <figcaption>
-                    <p>asfunsadifnias asdfjiuasndif fsauidnfin fuidsnifn fiudsnifusno fdsiunfijiurn geriu iru</p>
+                    <p>The number of self-identified LGBTQ+ individuals has increased with newer generations. The graph displays the percentage of respondents in each generation who identified themselves as LGBTQ+ from only 1.1% in the Silent Generation to 24.7% in Gen Z, as collected in 2023.</p>
                     <a href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
                 </figcaption>
             </div>
