--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
             <h2>The LGBTQ+ community is a diverse group of identities across the gender and sexual orientation spectrums.</h2>
         </section>
 
-        <section class="content" id="sect-1">
-            <h2>People in younger generations are being more open about their identities, and some are more vocal about the important issues threatening their rights. However, it is not always safe to be so open or so vocal, with many having to hide their true selves from the world.</h2>
-            <hr class="rule-h">
+        <section class="content content-layout-1" id="sect-1">
+            <h2>People in younger generations are becoming more open about their identities than those in the past, and discovering who they are.</h2>
+            <hr class="rule rule-v rule-1">
+            <hr class="rule rule-h rule-2">
             <blockquote>
                 <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
                 <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. I'm really glad that today's youth get at least a bit more acceptance and I hope that tomorrow's youth will get even more. I hope that someday, being LGBT is so normalized that coming out won't even be a thing. That someday straight and cis will no longer be assumed to be ‘the default’ with LGBT being ‘the other’.</p>
                 <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                <a href="https://www.reddit.com/r/lgbt/comments/1cu6bfi/comment/l4iwzvt/">Original Post</a>
             </blockquote>
-            <hr class="rule-v">
+            <hr class="rule rule-v rule-3">
             <div class="graph">
                 <h3>US Self-Identified LGBTQ+ Individuals by Generation</h3>
                 <figure>
@@ -41,16 +43,17 @@
                         <div style="height: calc((100% - 0.875rem)/5);">5%</div>
                         <div style="height: calc((100% - 0.875rem)/5);">0%</div>
                     </div>
-                    <img class="chart" src="graphs/generations.svg">
-                    <div class="axis-labels bottom-axis-labels">
-                        <div style="width: 20%">Silent Generation (born before 1946)</div>
-                        <div style="width: 20%">Baby Boomers (born 1946-1964)</div>
-                        <div style="width: 20%">Generation X (born 1965-1980)</div>
-                        <div style="width: 20%">Millennials (born 1981-1996)</div>
-                        <div style="width: 20%">Generation Z (born 1997-2003)</div>
+                    <img class="chart" style="padding-block: 0.5rem;" src="graphs/generations.svg">
+                    <div class="axis-labels bottom-axis-labels" style="justify-content: space-around">
+                        <div style="width: calc(200%/15)">Silent Generation (born before 1946)</div>
+                        <div style="width: calc(200%/15)">Baby Boomers (born 1946-1964)</div>
+                        <div style="width: calc(200%/15)">Generation X (born 1965-1980)</div>
+                        <div style="width: calc(200%/15)">Millennials (born 1981-1996)</div>
+                        <div style="width: calc(200%/15)">Generation Z (born 1997-2003)</div>
                     </div>
                     <div class="axis-title bottom-axis-title">Generation</div>
                     <div class="key">
+                        <div class="axis-title key-title">Identity</div>
                         <div>
                             <div class="key-color" style="background-color: #8e8e8e;"></div>
                             <div class="key-label">Other</div>
@@ -72,10 +75,66 @@
                             <div class="key-label">Bisexual</div>
                         </div>
                     </div>
+                    
                 </figure>
                 <figcaption>
                     <p>The number of self-identified LGBTQ+ individuals has increased with newer generations. The graph displays the percentage of respondents in each generation who identified themselves as LGBTQ+ from only 1.1% in the Silent Generation to 24.7% in Gen Z, as collected in 2023.</p>
                     <a href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
+                </figcaption>
+            </div>
+        </section>
+
+        <section class="content content-layout-2" id="sect-2">
+            <h2>At the same time, people in the US are slowly becoming more accepting of those in the community, allowing others to be more open and express themselves more freely.</h2>
+            <hr class="rule rule-v rule-1">
+            <hr class="rule rule-h rule-2">
+            <blockquote>
+                <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                <p>Being queer is being more accepted as time goes on; people are more comfortable to be open about their sexuality if they’re not ridiculed for it. The digital age also allows for more opportunities to communicate with other queer people and enhance that sense of community. There are heaps of organizations supporting queer youths. All these things contribute to creating a safer environment.</p>
+                <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                <a href="https://www.reddit.com/r/TooAfraidToAsk/comments/tnks1m/comment/i22drf4/">Original Post</a>
+            </blockquote>
+            <hr class="rule rule-v rule-3">
+            <div class="graph">
+                <h3>US Moral Views of Gay and Lesbian Relationships Over Time</h3>
+                <figure>
+                    <div class="axis-title side-axis-title">Percentage</div>
+                    <div class="axis-labels side-axis-labels">
+                        <div style="height: calc((100% - 0.875rem)/5);">100%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">80%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">60%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">40%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">20%</div>
+                        <div style="height: calc((100% - 0.875rem)/5);">0%</div>
+                    </div>
+                    <img class="chart" style="padding-block: 0.5rem;" src="graphs/moral_views.svg">
+                    <div class="axis-labels bottom-axis-labels" style="justify-content: center">
+                        <div style="width: calc(100%*5/23)">2005</div>
+                        <div style="width: calc(100%*5/23)">2010</div>
+                        <div style="width: calc(100%*5/23)">2015</div>
+                        <div style="width: calc(100%*5/23)">2020</div>
+                    </div>
+                    <div class="axis-title bottom-axis-title">Year</div>
+
+                    <div class="key">
+                        <div class="axis-title key-title">Moral Views</div>
+                        <div>
+                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-label">Morally Okay</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-label">Other</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-label">Morally Wrong</div>
+                        </div>
+                    </div>
+                </figure>
+                <figcaption>
+                    <p>Opinions about LGBTQ+ relationships are becoming more accepted in recent years in the US from 40% in 2001 to 64% in 2024. “Other” responses include “depends on situation”, “not a moral issue” and “no opinion”.</p>
+                    <a href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data</a>
                 </figcaption>
             </div>
         </section>
