--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <hr class="rule rule-h rule-2">
             <blockquote>
                 <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. I'm really glad that today's youth get at least a bit more acceptance and I hope that tomorrow's youth will get even more. I hope that someday, being LGBT is so normalized that coming out won't even be a thing. That someday straight and cis will no longer be assumed to be ‘the default’ with LGBT being ‘the other’.</p>
+                <p>I, like many, grew up not knowing I was queer till I was an adult. I grew up in an unaccepting environment where LGBT anything was shunned and I internalized some of that. I’m really glad that today’s youth get at least a bit more acceptance and I hope that tomorrow’s youth will get even more. I hope that someday, being LGBT is so normalized that coming out won’t even be a thing. That someday straight and cis will no longer be assumed to be “the default” with LGBT being “the other”.</p>
                 <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                <a href="https://www.reddit.com/r/lgbt/comments/1cu6bfi/comment/l4iwzvt/">Original Post</a>
+                <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1cu6bfi/comment/l4iwzvt/">Original Post</a>
             </blockquote>
             <hr class="rule rule-v rule-3">
             <div class="graph">
@@ -45,11 +45,11 @@
                     </div>
                     <img class="chart" style="padding-block: 0.5rem;" src="graphs/generations.svg">
                     <div class="axis-labels bottom-axis-labels" style="justify-content: space-around">
-                        <div style="width: calc(200%/15)">Silent Generation (born before 1946)</div>
-                        <div style="width: calc(200%/15)">Baby Boomers (born 1946-1964)</div>
-                        <div style="width: calc(200%/15)">Generation X (born 1965-1980)</div>
-                        <div style="width: calc(200%/15)">Millennials (born 1981-1996)</div>
-                        <div style="width: calc(200%/15)">Generation Z (born 1997-2003)</div>
+                        <div style="width: calc(200%/15)">Silent Gen<br>(1928-1946)</div>
+                        <div style="width: calc(200%/15)">Baby Boomers<br>(1946-1964)</div>
+                        <div style="width: calc(200%/15)">Gen X<br>(1965-1980)</div>
+                        <div style="width: calc(200%/15)">Millennials<br>(1981-1996)</div>
+                        <div style="width: calc(200%/15)">Gen Z<br>(1997-2003)</div>
                     </div>
                     <div class="axis-title bottom-axis-title">Generation</div>
                     <div class="key">
@@ -79,7 +79,7 @@
                 </figure>
                 <figcaption>
                     <p>The number of self-identified LGBTQ+ individuals has increased with newer generations. The graph displays the percentage of respondents in each generation who identified themselves as LGBTQ+ from only 1.1% in the Silent Generation to 24.7% in Gen Z, as collected in 2023.</p>
-                    <a href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
+                    <a target="_blank" href="https://news.gallup.com/poll/611864/lgbtq-identification.aspx">Source Data</a>
                 </figcaption>
             </div>
         </section>
@@ -90,9 +90,9 @@
             <hr class="rule rule-h rule-2">
             <blockquote>
                 <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
-                <p>Being queer is being more accepted as time goes on; people are more comfortable to be open about their sexuality if they’re not ridiculed for it. The digital age also allows for more opportunities to communicate with other queer people and enhance that sense of community. There are heaps of organizations supporting queer youths. All these things contribute to creating a safer environment.</p>
+                <p>Being queer is being more accepted as time goes on; people are more comfortable to be open about their sexuality if they’re not ridiculed for it. The digital age also allows for more opportunities to communicate with other queer people and enhance that sense of community. There are heaps of [organizations] supporting queer youths. All these things contribute to creating a safer environment.</p>
                 <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
-                <a href="https://www.reddit.com/r/TooAfraidToAsk/comments/tnks1m/comment/i22drf4/">Original Post</a>
+                <a target="_blank" href="https://www.reddit.com/r/TooAfraidToAsk/comments/tnks1m/comment/i22drf4/">Original Post</a>
             </blockquote>
             <hr class="rule rule-v rule-3">
             <div class="graph">
@@ -115,7 +115,6 @@
                         <div style="width: calc(100%*5/23)">2020</div>
                     </div>
                     <div class="axis-title bottom-axis-title">Year</div>
-
                     <div class="key">
                         <div class="axis-title key-title">Moral Views</div>
                         <div>
@@ -134,9 +133,160 @@
                 </figure>
                 <figcaption>
                     <p>Opinions about LGBTQ+ relationships are becoming more accepted in recent years in the US from 40% in 2001 to 64% in 2024. “Other” responses include “depends on situation”, “not a moral issue” and “no opinion”.</p>
-                    <a href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data</a>
+                    <a target="_blank" href="https://news.gallup.com/poll/646202/sex-relations-marriage-supported.aspx">Source Data</a>
                 </figcaption>
             </div>
+        </section>
+
+        <section class="content content-layout-1" id="sect-3">
+            <h2>However there are still many who believe that LGBTQ+ individuals don’t deserve basic rights, and laws are being created that actively infringe on those rights, moving the needle backwards.</h2>
+            <hr class="rule rule-v rule-1">
+            <hr class="rule rule-h rule-2">
+            <blockquote>
+                <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                <p>Every day it seems like I hear more and more anti-LGBT laws and bills are being proposed and passed. [...] I used to be FILLED with hope for the future, I used to think that it’ll all get better. [...] [But] this past year, it’s all quickly gone away. I’ve been living better than I ever have [these] past few months. [...] I’ve started HRT, moved away from my transphobic grandparents and I’m with my loving partner. Happier than I’ve ever been. But it feels like I’m not allowed to celebrate, like no matter what I do [it’s] not gonna matter soon.</p>
+                <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1bapqls/is_everything_really_gonna_be_alright_in_the_usa/">Original Post</a>
+            </blockquote>
+            <hr class="rule rule-v rule-3">
+            <div class="graph">
+                <h3>Number of Anti-LGBTQ+ Bills Introduced Per Year</h3>
+                <figure>
+                    <div class="axis-title side-axis-title">Bills Introduced</div>
+                    <div class="axis-labels side-axis-labels">
+                        <div style="height: calc((100% - 0.875rem)/6);">600</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">500</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">400</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">300</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">200</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">100</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">0</div>
+                    </div>
+                    <img class="chart" style="padding-block: 0.5rem;" src="graphs/laws.svg">
+                    <div class="axis-labels bottom-axis-labels" style="justify-content: space-around">
+                        <div style="width: calc(200%/18)">2018</div>
+                        <div style="width: calc(200%/18)">2019</div>
+                        <div style="width: calc(200%/18)">2020</div>
+                        <div style="width: calc(200%/18)">2021</div>
+                        <div style="width: calc(200%/18)">2022</div>
+                        <div style="width: calc(200%/18)">2023</div>
+                    </div>
+                    <div class="axis-title bottom-axis-title">Year</div>
+                </figure>
+                <figcaption>
+                    <p>There has been an increasing number of bills introduced in state legislatures in recent years, from 42 in 2018 to 510 in 2023. In 2023, 84 of these bills were passed, which was 16% of those that were introduced.</p>
+                    <a target="_blank" href="https://www.cnn.com/politics/anti-lgbtq-plus-state-bill-rights-dg/index.html">Source Data</a>
+                </figcaption>
+            </div>
+        </section>
+
+        <section class="content content-layout-2" id="sect-4">
+            <h2>And not everyone is silent in their opposition. People are consistently attacked just for existing as themselves, and it is not always safe to be open about your identity with many having to hide their true selves from the world.</h2>
+            <hr class="rule rule-v rule-1">
+            <hr class="rule rule-h rule-2">
+            <blockquote>
+                <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                <p>I was biking to school one morning and I had [a pride pin] on my backpack. I was taking the route I usually took and I didn’t really think I was in that much danger. But some truck was behind me and I kid you not he SWERVED INTO THE BIKE LANE TO TRY AND HIT ME. I was able to pull my bike onto the sidewalk in time and he just drove off and screamed “QUEER!” really angrily out the window. [...] This really shook me up, not just in the fact that I had almost died but because I grew up in such a sheltered community with such supportive friends and family, I kind of forgot that people would do this kind of shit. Anyways I took the pin off, I just haven’t really felt that safe ever since that incident.</p>
+                <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/1e5rr5r/i_think_someone_tried_to_hate_crime_me/">Original Post</a>
+            </blockquote>
+            <hr class="rule rule-v rule-3">
+            <div class="graph">
+                <h3>Percentage of LGBTQ+ Youth Harmed For Their Identity</h3>
+                <figure>
+                    <div class="axis-title side-axis-title">Percentage</div>
+                    <div class="axis-labels side-axis-labels">
+                        <div style="height: calc((100% - 0.875rem)/6);">60%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">50%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">40%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">30%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">20%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">10%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">0%</div>
+                    </div>
+                    <img class="chart" style="padding-block: 0.5rem;" src="graphs/harmed_for_identity.svg">
+                    <div class="axis-labels bottom-axis-labels" style="justify-content: center">
+                        <div style="width: calc(100%*5/23)">2005</div>
+                        <div style="width: calc(100%*5/23)">2010</div>
+                        <div style="width: calc(100%*5/23)">2015</div>
+                        <div style="width: calc(100%*5/23)">2020</div>
+                    </div>
+                    <div class="axis-title bottom-axis-title">Identity</div>
+                    <div class="key">
+                        <div class="axis-title key-title">Category</div>
+                        <div>
+                            <div class="key-color" style="background-color: #ffd261;"></div>
+                            <div class="key-label">Gender</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #79599e;"></div>
+                            <div class="key-label">Sexuality</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #8e8e8e;"></div>
+                            <div class="key-label">Other</div>
+                        </div>
+                    </div>
+                </figure>
+                <figcaption>
+                    <p>Data from The Trevor Project shows the percentage of individuals who were physically threatened or harmed for their identity. The study was an online survey of over 30,000 individuals, aged 13-24 and living in the U.S.</p>
+                    <a target="_blank" href="https://www.thetrevorproject.org/survey-2022/#threatened-by-sexual-orientation">Source Data</a>
+                </figcaption>
+            </div>
+        </section>
+
+        <section class="content content-layout-1" id="sect-5">
+            <h2>But the negative impacts don’t stop with direct acts of hate. These harmful attitudes affect nearly every part of their lives like job prospects and healthcare, and lead to detrimental mental health issues.</h2>
+            <hr class="rule rule-v rule-1">
+            <hr class="rule rule-h rule-2">
+            <blockquote>
+                <img class="quote-mark quote-left" src="icons/quotes.svg" alt="double left quote">
+                <p>Since coming out as trans and explaining that I have queer attraction to women, I have dealt with far more abuse. I am constantly belittled, invalidated, and dehumanized just for being myself and doing no harm to anyone whatsoever. The only person I harmed was myself prior to accepting my queerness; I used to regularly self-harm and I struggled for years with suicidal ideation. I’ve only recently in the last few years since I’ve accepted myself[,] felt like I don’t hate myself[,] and I don’t want to hurt myself anymore.</p>
+                <img class="quote-mark quote-right" src="icons/quotes.svg" alt="double right quote">
+                <a target="_blank" href="https://www.reddit.com/r/lgbt/comments/12shztd/older_lgbt_people_how_did_you_cope_and_survive/">Original Post</a>
+            </blockquote>
+            <hr class="rule rule-v rule-3">
+            <div class="graph">
+                <h3>Mental Illness Prevalance By Sexuality and Gender</h3>
+                <figure>
+                    <div class="axis-title side-axis-title">Percentage</div>
+                    <div class="axis-labels side-axis-labels">
+                        <div style="height: calc((100% - 0.875rem)/6);">60%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">50%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">40%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">30%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">20%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">10%</div>
+                        <div style="height: calc((100% - 0.875rem)/6);">0%</div>
+                    </div>
+                    <img class="chart" style="padding-block: 0.5rem;" src="graphs/mental_health.svg">
+                    <div class="axis-labels bottom-axis-labels" style="justify-content: center">
+                        <div style="width: calc(200%*9)">Straight</div>
+                        <div style="width: calc(200%*9)">Bisexual</div>
+                        <div style="width: calc(200%*9)">Homosexual</div>
+                    </div>
+                    <div class="axis-title bottom-axis-title">Identity</div>
+                    <div class="key">
+                        <div class="axis-title key-title">Moral Views</div>
+                        <div>
+                            <div class="key-color" style="background-color: #40adad;"></div>
+                            <div class="key-label">Male</div>
+                        </div>
+                        <div>
+                            <div class="key-color" style="background-color: #d34c69;"></div>
+                            <div class="key-label">Female</div>
+                        </div>
+                    </div>
+                </figure>
+                <figcaption>
+                    <p>The percentage of individuals who had any mental illness in the past year (2021 and 2022 average) is higher among females overall, as well as LGBTQ+ individuals. Straight men had the lowest prevalence at 18.1% and bisexual women had the highest prevalance at 53.9%.</p>
+                    <a target="_blank" href="https://www.samhsa.gov/newsroom/press-announcements/20230613/samhsa-releases-new-data-lesbian-gay-bisexual-behavioral-health">Source Data</a>
+                </figcaption>
+            </div>
+        </section>
+
+        <section id="outro">
+            <h2>And all of this harm is being done, just for the desire for someone to be their true self, open and honestly to themselves and the world. It doesn’t have to stay this way. Fight for legislation that protects LGBTQ+ rights. Fight against discrimination and violence. Fight for the right to be yourself.</h2>
         </section>
     </main>
 </body>
